@@ -5,6 +5,10 @@ Version 2.1
 -----------
 (codename to be selected, release date yet unknown)
 
+- fixed a bug with nested loops and the special loop variable.  Before the
+  change an inner loop overwrote the loop variable from the outer one after
+  iteration.
+
 Version 2.0
 -----------
 (codename jinjavitus, released on July 17th 2008)
